# simplelocalize-download

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  test.yml
docs/: migration-pixai.md
python/simplelocalize_download/: __init__.py  _core.pyi  cli.py  logging_setup.py
src/: api.rs  download.rs  error.rs  lib.rs  model.rs  python.rs  retry.rs  template.rs
tests/: conftest.py  test_bindings.py  test_cli.py  test_e2e.py  test_smoke.py  typing_example.py
