[package]
name = "simplelocalize-download"
version = "0.1.0"
edition = "2024"
description = "Resilient Rust port of the SimpleLocalize CLI download command, with Python bindings"
license = "MIT"
repository = "https://github.com/jimexist/simplelocalize-download"

[lib]
name = "simplelocalize_download"
# cdylib: the Python extension module. rlib: so `cargo test` can link the crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.29.0"
pyo3-log = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
futures = "0.3"
backon = "1.6.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "test-util"] }
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
