[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "simplelocalize-download"
description = "Resilient Rust-powered port of the SimpleLocalize CLI download command, with a Python library and Typer CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jiayu Liu" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=13",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jimexist/simplelocalize-download"
Issues = "https://github.com/jimexist/simplelocalize-download/issues"

[project.scripts]
simplelocalize-download = "simplelocalize_download.cli:app"

[dependency-groups]
dev = [
    "maturin>=1.14,<2.0",
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.maturin]
python-source = "python"
module-name = "simplelocalize_download._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["python"]

[[tool.mypy.overrides]]
# The compiled extension is described by _core.pyi; no runtime stubs to follow.
module = "simplelocalize_download._core"
ignore_missing_imports = true
